--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-12">
-        <h1>D3Times</h1>
+        <h2>Correlations Discovered Between Age and Poverty in the US</h2>
+        <br>
+        <br>
       </div>
     </div>
     <div class="row">
@@ -34,7 +36,6 @@
     <div class="row">
       <div class="col-xs-12  col-md-9">
         <div class="article">
-          <h2>Correlations Discovered Between Health Risks and Age, Income</h2>
           <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
             quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
             ultricies mi vitae est. Mauris placerat eleifend leo.</p>
@@ -57,6 +58,7 @@
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.13.0/d3.min.js"></script>
   <script type="text/javascript" src="assets/js/app.js"></script>
 
 </body>
